Update QueueOfInterger.java